--- a/index.html
+++ b/index.html
@@ -9,12 +9,282 @@
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- fav icon -->
-    <link rel="shortcut icon" href="images/ICON/Logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo-1.png" type="image/x-icon">
     <!-- style css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <!-- nav bar star -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="images/ICON/Logo.png" alt="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+        
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">books <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#courses">Courses</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">others</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">blog</a>
+                    </li>
+                    <li class="nav-item active">
+                    <a class="nav-link" href="#">sing in</a>
+                    </li>
+                </ul>
+           </div>
+        </div>
+      </nav>
+    <!-- nav bar end -->
+    <!-- banner star -->
+    <div id="banner">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-5">
+                    <h6 class="banner-first-text">Are you ready to Learn?</h6>
+                    <h1 class="banner-title-text">Learn With fun on <span>any schedule</span></h1>
+                    <p class="banner-second-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius blandit facilisis quam netus.</p>
+                    <button class="banner-button">Get Started</button>
+                </div>
+                <div class="col-md-7">
+                    <img src="images/Photos/Illustration.png" alt="banner-img">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- banner end -->
+    <!-- achivement start -->
+    <div id="achivement">
+        <div class="container">
+            <div class="card-deck">
+                <div class="card">
+                    <img class="img-fluid w-25" src="images/ICON/book.png" class="card-img-top" alt="image-1">
+                  <div class="card-body">
+                        <h5 class="card-title">1500+ Topic</h5>
+                        <p class="card-text">Lorem ipsum dolor consectetur adipisicing elit.</p>
+                   </div>
+                </div>
+                <div class="card">
+                    <img class="img-fluid w-25" src="images/ICON/Student.png" class="card-img-top" alt="image-2">
+                  <div class="card-body">
+                        <h5 class="card-title">1800+ Students</h5>
+                        <p class="card-text">Lorem ipsum dolor consectetur adipisicing elit.</p>
+                   </div>
+                </div>
+                <div class="card">
+                    <img class="img-fluid w-25" src="images/ICON/Test.png" class="card-img-top" alt="image-3">
+                    <div class="card-body">
+                        <h5 class="card-title">9K+ Test Token</h5>
+                        <p class="card-text">Lorem ipsum dolor consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="img-fluid w-25" src="images/ICON/Students.png" class="card-img-top" alt="image-4">
+                    <div class="card-body">
+                        <h5 class="card-title align-center">2000+ Student</h5>
+                        <p class="card-text">Lorem ipsum dolor consectetur adipisicing elit.</p>
+                    </div>
+              </div>
+        </div>
+        </div>
+    </div>
+    <!-- achivement end -->
+    <!-- Courses start -->
+    <div id="courses">
+        <div class="container">
+            <h1 class="section-title-text text-center">Online Courses</h1>
+            <p class="section-underline"></p>
+            <div class="card-deck">
+                <div class="card">
+                     <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="Courses img">
+                    <div class="card-body">
+                        <h5 class="card-title">Modern Psychology</h5>
+                        <p class="card-text">Designation</p>
+                        <button class="banner-button">Buy Course</button>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <div class="footer-img">
+                            <img src="images/ICON/calendar.png" alt="calendar.png">
+                            <small>Start 20  April, 2021</small>
+                        </div>
+                        <div class="footer-img">
+                            <img src="images/ICON/people.png" alt="people.png">
+                            <small>60 seats</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                  <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="Courses img">
+                  <div class="card-body">
+                        <h5 class="card-title">Modern Psychology</h5>
+                        <p class="card-text">Designation</p>
+                        <button class="banner-button">Buy Course</button>
+                  </div>
+                  <div class="card-footer d-flex justify-content-between">
+                    <div class="footer-img">
+                        <img src="images/ICON/calendar.png" alt="calendar.png">
+                        <small>Start 20  April, 2021</small>
+                    </div>
+                    <div class="footer-img">
+                        <img src="images/ICON/people.png" alt="people.png">
+                        <small>60 seats</small>
+                    </div>
+                </div>
+                </div>
+                <div class="card">
+                  <img src="images/Photos/Morder psyc.png" class="card-img-top" alt="Courses img">
+                  <div class="card-body">
+                    <h5 class="card-title">Modern Psychology</h5>
+                    <p class="card-text">Designation</p>
+                    <button class="banner-button">Buy Course</button>
+                  </div>
+                  <div class="card-footer d-flex justify-content-between">
+                    <div class="footer-img">
+                        <img src="images/ICON/calendar.png" alt="calendar.png">
+                        <small>Start 20  April, 2021</small>
+                    </div>
+                    <div class="footer-img">
+                        <img src="images/ICON/people.png" alt="people.png">
+                        <small>60 seats</small>
+                    </div>
+                </div>
+                </div>
+              </div>
+        </div>
+    </div>
+    <!-- Courses end -->
+    <!-- Testimonial start -->
+    <div id="testimonial">
+        <div class="container">
+            <h1 class="section-title-text text-center">testimonial</h1>
+            <p class="section-underline"></p>
+            <div class="row testimonial-img-text">
+                <div class="col-md-4 d-flex justify-content-end">
+                    <img class="testimonial-img img-fluid" src="images/Photos/Man.png" alt="">
+                </div>
+                <div class="col-md-8">
+                    <p class="testimonial-text">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, 
+                    or randomised words which don't look even slightly believable.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Testimonial end -->
+    <!-- contact start -->
+    <div id="contact">
+        <div class="container">
+            <h1 class="section-title-text text-center">Give As A Good News</h1>
+            <p class="section-underline"></p>
+            <div class="row contact-info">
+                <div class="col-md-6">
+                    <div class="contact-form">
+                        <form action="">
+                            <input type="text" placeholder="name">
+                            <input type="email" placeholder="email">
+                            <input type="text" placeholder="subject">
+                            <input type="message" placeholder="message" id="message">
+                            <button class="banner-button text-center">SEND</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex align-items-center">
+                    <img class="contact-img" src="images/Photos/Illustration.png" alt="contact img">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- contact end -->
+    <!-- footer start -->
+    <footer>
+        <div class="container">
+            <div class="footer-up">
+                <div class="row">
+                    <div class="col-md-5">
+                        <p class="footer-left-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, numquam.</p>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <h6 class="footer-list-tilte">course</h6>
+                                <ul class="footer-list">
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">graphic design</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">marketing</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">CCNA</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">video making</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">3D animation</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-4">
+                                <h6 class="footer-list-tilte">terms</h6>
+                                <ul class="footer-list">
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">cyber security</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">development</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">full stack</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">business</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">online class</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-4">
+                                <h6 class="footer-list-tilte">useful link</h6>
+                                <ul class="footer-list">
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">engineering</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">spoken English</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">graphic design</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">web desing</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a class="footer-link" href="#">development</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-down">
+                <p>copyright &copy; 2020. programming-hero.com</p>
+            </div>
+        </div>
+    </footer>
+    <!-- footer end -->
 
 
 
